[package]
name = "github_webhook"
version = "0.1.0"
authors = ["Hosshii <sao_heath6147.wistre@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
afterparty = "0.2.0"
serde = "1.0.125"
serde_json = "1.0.64"
